--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ paho-mqtt = "==1.4.0"
 sqlalchemy = "==1.3.8"
 alembic = "==1.1.0"
 psycopg2 = "==2.8.3"
+pytest = "==5.1.3"
+redis = "*"
 
 [requires]
 python_version = "3.7"
