--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,9 @@ alembic = "==1.1.0"
 psycopg2 = "==2.8.3"
 pytest = "==5.1.3"
 redis = "*"
+flask = "==1.1.1"
+flask-restful = "*"
+flask-httpauth = "==3.3.0"
 
 [requires]
 python_version = "3.7"
