--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ pytest = "==5.1.3"
 redis = "*"
 flask = "==1.1.1"
 flask-restful = "*"
-flask-httpauth = "==3.3.0"
+flask-jwt-extended = "*"
 
 [requires]
 python_version = "3.7"
